--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  line-height: 1;
 }
 
 textarea {
@@ -14,7 +15,7 @@ textarea {
 
 /*added new element styling*/
 
-.jumbotron {
+.header{
   text-align: center;
   background-color: transparent;
   color: black;
